[gd_scene load_steps=6 format=3 uid="uid://dbn4aqnhbjtwc"]

[ext_resource type="Script" uid="uid://dkm8nsw37ut5x" path="res://scripts/main.gd" id="1_20opy"]
[ext_resource type="PackedScene" uid="uid://cmp5axnr8gjst" path="res://backgrounds/background_scenes/level_3_background.tscn" id="2_8l0e1"]
[ext_resource type="PackedScene" uid="uid://bvoxjucdyfiif" path="res://hud.tscn" id="3_lfnxh"]
[ext_resource type="PackedScene" uid="uid://bpgokwdjxrigt" path="res://objects/boundary.tscn" id="4_ofchu"]
[ext_resource type="PackedScene" uid="uid://b40hks2sfoav1" path="res://objects/player.tscn" id="5_jq78i"]

[node name="Level_3" type="Node2D"]
script = ExtResource("1_20opy")

[node name="level_3_background" parent="." instance=ExtResource("2_8l0e1")]

[node name="HUD" parent="." instance=ExtResource("3_lfnxh")]

[node name="Boundary" parent="." instance=ExtResource("4_ofchu")]

[node name="Player" parent="." instance=ExtResource("5_jq78i")]
position = Vector2(225, 329)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="ObjectSpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="ObjectSpawnTimer" to="." method="_on_object_spawn_timer_timeout"]
